# fewgon

./: .gitmodules  CMakeLists.txt  README.md
libs/core/: CMakeLists.txt
libs/core/tests/: CMakeLists.txt  sanity_check.cpp
